--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
     <div class="glitch" data-text="HACKED BY MR.M05T3R">HACKED BY MR.M05T3R</div>
     <div class="subtitle">FOUNDER <span style="color:red">NEWBIE CYBER SECURITY</span></div>
     <div class="typing">
-      Greetings, Website Administrator. This is a security notice from the NEWBIE CYBER SECURITY (NCS) team...
-    </div>
+      Selamat Website Anda Kami Retas. </div>
     <img class="logo" src="logo-ncs.jpg" alt="Logo NCS" />
     <div class="info-box">
       <div><strong>IP Anda:</strong> <span id="ip-address">Memuat...</span></div>
