--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="NEWBIE CYBER SECURITY" />
   <meta name="theme-color" content="#000000" />
-  <meta name="author" content="MR.M05T3R" />
+  <meta name="author" content="INDRA XPLOIT" />
   <link rel="shortcut icon" href="logo-ncs.jpg" />
-  <title>HACKED BY MR.M05T3R</title>
+  <title>HACKED BY INDRA XPLOIT</title>
   <style>
     * {
       margin: 0;
@@ -171,8 +171,8 @@
 </head>
 <body onclick="playAudio()">
   <header>
-    <div class="glitch" data-text="HACKED BY MR.M05T3R">HACKED BY MR.M05T3R</div>
-    <div class="subtitle">FOUNDER <span style="color:red">NEWBIE CYBER SECURITY</span></div>
+    <div class="glitch" data-text="HACKED BY INDRA XPLOIT">HACKED BY INDRA XPLOIT</div>
+    <div class="subtitle">STAFF <span style="color:red">NEWBIE CYBER SECURITY</span></div>
     <div class="typing">Selamat Website Anda Kami Retas.</div>
     <img class="logo" src="logo-ncs.jpg" alt="Logo NCS" />
 
